force-app/main/default/objects/Staging_Day__c/Staging_Day__c.object-meta.xml
<CustomObject>
    <label>Staging Day</label>
    <nameField>
        <displayFormat>SD-{000}</displayFormat>
        <label>Staging Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Day</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>