force-app/main/default/objects/Staging_Day__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <label>Breakfast</label>
    <length>120</length>
    <type>Text</type>
</CustomField>