force-app/main/default/objects/Staging_Day__c/fields/Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burned__c</fullName>
    <label>Calories Burned</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>