force-app/main/default/objects/Staging_Day__c/fields/Carbs__c.field-meta.xml
<CustomField>
    <fullName>Carbs__c</fullName>
    <label>Carbs</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>