force-app/main/default/objects/Staging_Day__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day</label>
    <referenceTo>Day__c</referenceTo>
    <relationshipLabel>Staging Day</relationshipLabel>
    <relationshipName>Staging_Day</relationshipName>
    <type>Lookup</type>
</CustomField>