force-app/main/default/objects/Staging_Day__c/fields/Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_Number__c</fullName>
    <formula>DAY(Date__c)</formula>
    <label>Day Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>