force-app/main/default/objects/Staging_Day__c/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <label>Dinner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>