force-app/main/default/objects/Staging_Day__c/fields/Drinks__c.field-meta.xml
<CustomField>
    <fullName>Drinks__c</fullName>
    <label>Drinks</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>