force-app/main/default/objects/Staging_Day__c/fields/Liters_of_Water__c.field-meta.xml
<CustomField>
    <fullName>Liters_of_Water__c</fullName>
    <label>Liters of Water</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>