force-app/main/default/objects/Staging_Day__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <length>120</length>
    <type>Text</type>
</CustomField>