force-app/main/default/objects/Staging_Day__c/fields/Minutes_of_TV__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_TV__c</fullName>
    <label>Minutes of TV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>