force-app/main/default/objects/Staging_Day__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipLabel>Staging Day</relationshipLabel>
    <relationshipName>Staging_Day</relationshipName>
    <type>Lookup</type>
</CustomField>