force-app/main/default/objects/Staging_Day__c/fields/Number_of_Pushups__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pushups__c</fullName>
    <label>Number of Pushups</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>