force-app/main/default/objects/Staging_Day__c/fields/Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>Processing_Error__c</fullName>
    <label>Processing Error</label>
    <type>TextArea</type>
</CustomField>