force-app/main/default/objects/Staging_Day__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>