force-app/main/default/objects/Staging_Day__c/fields/Sleep_Time__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Time__c</fullName>
    <label>Sleep Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>