force-app/main/default/objects/Staging_Day__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready to Process</fullName>
                <default>true</default>
                <label>Not Ready to Process</label>
            </value>
            <value>
                <fullName>Ready to Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>