force-app/main/default/objects/Staging_Day__c/fields/Week_String__c.field-meta.xml
<CustomField>
    <fullName>Week_String__c</fullName>
    <label>Week String</label>
    <length>120</length>
    <type>Text</type>
</CustomField>